--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,5 +60,6 @@
         "memory_resource": "cpp",
         "random": "cpp",
         "set": "cpp"
-    }
+    },
+    "C_Cpp.default.configurationProvider": "vector-of-bool.cmake-tools"
 }
